# Financial-Advisor-LLM-RAG

./: README.md
modules/streaming_pipeline/: Makefile  README.md
modules/streaming_pipeline/deploy/: launch_ec2.sh  to_ecr.sh
modules/streaming_pipeline/streaming_pipeline/: base.py
modules/streaming_pipeline/tools/: logging.yaml
modules/training_pipeline /: Makefile  __init__.py  pyproject.toml
modules/training_pipeline /tools/: inference_run.py  train_run.py
modules/training_pipeline /training_pipeline_/: configs.py
modules/training_pipeline /training_pipeline_/api/: inference.py  training.py
streaming_pipeline/: pyproject.toml
